# phonelogai

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  NLQ_IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  SETUP_COMPLETE.md  TASKCHECKLIST.md  env.config.md  package-lock.json  package.json  tsconfig.json  turbo.json
.claude/: settings.local.json
.claude/agents/: data-ingestion-ai-agent.md  database-backend-agent.md  frontend-dashboard-agent.md  mobile-development-agent.md  security-privacy-agent.md
.claude/tasks/: ai-file-parser-implementation-summary.md  ai-file-parser-implementation.md  ai-powered-file-parser-api-endpoints.md  android-data-collection.md  (+46 more)
workers/: ML_SYSTEM_SUMMARY.md  pyproject.toml  requirements.txt
workers/src/phonelogai_workers/: __init__.py
workers/src/phonelogai_workers/config/: __init__.py  settings.py
workers/src/phonelogai_workers/ml/: README.md  cli.py  layout_classifier.py  performance_optimizer.py  template_manager.py  test_runner.py  validation_suite.py
workers/src/phonelogai_workers/parsers/: __init__.py  cdr_parser.py  csv_parser.py  enhanced_cdr_parser.py  enhanced_csv_parser.py  pdf_parser.py
workers/src/phonelogai_workers/performance/: performance_test_suite.py
workers/src/phonelogai_workers/queue/: __init__.py  celery_app.py
workers/src/phonelogai_workers/tasks/: __init__.py  enhanced_processing_tasks.py  file_processing_tasks.py
workers/src/phonelogai_workers/utils/: database.py  deduplication.py  validation.py
workers/src/phonelogai_workers/validation/: __init__.py  data_normalization_engine.py  duplicate_detection_system.py  error_handler.py  field_mapping_system.py  performance_optimizer.py  usage_example.py  validation_pipeline.py
(+322 files in other folders)
