[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonelogai-workers"
version = "1.0.0"
description = "AI-powered file parsing workers for PhoneLog AI platform"
authors = [{name = "PhoneLog AI Team"}]
dependencies = [
    "celery>=5.3.4",
    "redis>=5.0.1",
    "pandas>=2.1.4",
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2",
    "transformers>=4.36.2",
    "torch>=2.1.2",
    "spacy>=3.7.2",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.3",
    "pytesseract>=0.3.10",
    "Pillow>=10.1.0",
    "openpyxl>=3.1.2",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",
    "psycopg2-binary>=2.9.9",
    "supabase>=2.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2",
    "python-multipart>=0.0.6",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true